Bug 1951296 - Account for uneven client margins in nsWindow::GetScreenEdgeSlop(). r=stransky

Return the larger of the two margins.

Some themes have a bigger bottom vs. top shadow, and without this change
session restore may incorrectly try to move the window up so that it's
in view.

Differential Revision: https://phabricator.services.mozilla.com/D240127